# curve-similarity-toy

./: .editorconfig  .gitignore  .yarnrc.yml  Cargo.toml  build.mjs  deno.json  index.html  mafs-0.15.2.tgz  main.ts  package.json  tsconfig.json
.github/workflows/: deploy.yml  test.yml
curve_similarity_toy/: Cargo.toml
rs_lib/: Cargo.toml
rs_lib/src/: color_maps.rs  lib.rs  shader.frag  shader.vert
rs_lib/src/geom/: curve.rs  curve_dist_fn.rs  line_segment.rs  mod.rs  point.rs
rs_lib/src/math/: function.rs  gradient.rs  mod.rs  partial_derivative.rs  scalar_field.rs
rs_lib/src/plot/: curve_dist_fn.rs  element_mesh.rs  isolines.rs  mod.rs
rs_lib/src/plot/layers/: mod.rs
rs_lib/src/plot/layers/contour_lines/: mod.rs  shader.vert
rs_lib/src/plot/layers/density/: mod.rs  shader.frag  shader.vert
rs_lib/src/traits/: mix.rs  mod.rs  vec_ext.rs
rs_lib/src/webgl/: buffer.rs  error.rs  index_buffer.rs  mod.rs  vertex.rs  vertex_buffer.rs
src/: curves.ts  main.ts  main.tsx  styles.scss
src/@types/: react.d.ts
src/components/: App.tsx  CurveSpaceView.tsx  ParamSpaceView.tsx
src/hooks/: useBoundingClientRect.ts  useDevicePixelRatio.ts
www/: index.html
