[package]
name = "rs_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.60"
palette = "0.6.1"
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.60"
features = [
"Document",
"Element",
"EventTarget",
"MouseEvent",
"Node",
"WebGlBuffer",
"WebGlVertexArrayObject",
"WebGl2RenderingContext",
"WebGlProgram",
"WebGlShader",
"WebGlUniformLocation",
"Window",
]