[package]
name = "rs_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.10.5"
js-sys = "0.3.60"
palette = "0.6.1"
wasm-bindgen = "0.2.83"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
approx = "0.5.1"
nalgebra = { version = "0.32.1", features = ["serde-serialize"] }

[dependencies.web-sys]
version = "0.3.60"
features = [
"console",
"Document",
"Element",
"EventTarget",
"HtmlCanvasElement",
"HtmlInputElement",
"HtmlSelectElement",
"InputEvent",
"MouseEvent",
"Node",
"WebGlBuffer",
"WebGlVertexArrayObject",
"WebGl2RenderingContext",
"WebGlProgram",
"WebGlShader",
"WebGlUniformLocation",
"Window",
]
